# CaveEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
applications/the_aviator/: CMakeLists.txt
applications/the_aviator/src/: main.cpp  the_aviator.cpp
cave/: CMakeLists.txt
cave/editor/: CMakeLists.txt
cave/engine/: CMakeLists.txt  pch.h
cave/engine/algorithm/: algorithm.cpp  algorithm.h
cave/engine/assets/: asset_entry.cpp  asset_entry.h  asset_handle.cpp  asset_handle.h  asset_importer.cpp  asset_importer.h  asset_interface.h  asset_loader.cpp  asset_loader.h  asset_manager.cpp  asset_manager.h  asset_meta_data.cpp  asset_meta_data.h  asset_type.cpp  blob_asset.cpp  blob_asset.h  guid.cpp  guid.h  image_asset.cpp  image_asset.h  importer_interface.cpp  importer_interface.h  material_asset.cpp  material_asset.h  mesh_asset.cpp  mesh_asset.h  scene_importer.cpp  scene_importer.h  sprite_animation_asset.h  tile_map_asset.cpp  tile_map_asset.h  tile_set_asset.cpp  tile_set_asset.h
cave/engine/ecs/: component_manager.cpp  component_manager.h  component_manager.inl  entity.h  view.h
cave/engine/empty/: empty_display_manager.h  empty_graphics_manager.h  empty_physics_manager.h  empty_pipeline_state_manager.h  empty_script_manager.h
cave/engine/input/: input_code.h  input_event.cpp  input_event.h
cave/engine/math/: aabb.cpp  aabb.h  angle.cpp  box.h  color.cpp  color.h  frustum.cpp  frustum.h  geomath.h  intersection.h  math.h  matrix.h  plane.cpp  plane.h  vector.h
cave/engine/memory/: allocator_interface.h  linear_allocator.cpp  linear_allocator.h  page_allocator.cpp  page_allocator.h
cave/engine/null/: null_display_manager.h  (+2 more)
cave/engine_assets/: CMakeLists.txt  engine_assets.cpp  primitive_meshes.h
cave/engine_tests/: CMakeLists.txt
cave/engine_tests/algorithm/: algorithm.test.cpp
cave/engine_tests/assets/: guid.test.cpp
cave/engine_tests/core/base/: concurrent_queue.test.cpp  fixed_stack.test.cpp  graph.test.cpp  rid_owner.test.cpp  ring_buffer.test.cpp  typedefs.test.cpp
cave/engine_tests/core/dynamic_variable/: dynamic_variable.test.cpp
cave/engine_tests/core/error/: error.test.cpp  error_macros.test.cpp
cave/engine_tests/core/io/: file_access.test.cpp  file_access_unix.test.cpp  print.test.cpp
cave/engine_tests/core/string/: string_utils.test.cpp
cave/engine_tests/ecs/: component_manager.test.cpp  view.test.cpp
cave/engine_tests/math/: box.test.cpp  math.test.cpp  ray.test.cpp  swizzle2.test.cpp  swizzle3.test.cpp  swizzle4.test.cpp  vector.test.h  vector_math.test.cpp
cave/engine_tests/memory/: linear_allocator.test.cpp
cave/engine_tests/systems/ecs/: component_manager.test.cpp  view.test.cpp
cave/modules/: CMakeLists.txt
cave/modules/assimp/: CMakeLists.txt  assimp_importer.cpp  assimp_importer.h  importer_assimp.cpp  importer_assimp.h
cave/modules/box2d/: CMakeLists.txt  box2d_physics_manager.cpp  box2d_physics_manager.h
cave/modules/bullet3/: CMakeLists.txt  bullet3_physics_manager.cpp  bullet3_physics_manager.h
cave/modules/d3d11/: CMakeLists.txt  d3d11_graphics_manager.cpp  d3d11_pipeline_state_manager.cpp  d3d11_pipeline_state_manager.h  d3d11_resources.h
cave/modules/d3d12/: CMakeLists.txt  d3d12_core.cpp  d3d12_core.h  d3d12_graphics_manager.cpp  d3d12_pipeline_state_manager.cpp  d3d12_pipeline_state_manager.h
cave/modules/d3d_common/: CMakeLists.txt  d3d_common.cpp  d3d_common.h
cave/modules/opengl4/: CMakeLists.txt  opengl4_graphics_manager.cpp  opengl4_graphics_manager.h
cave/modules/opengl_common/: CMakeLists.txt  opengl_common_graphics_manager.cpp  opengl_pipeline_state_manager.cpp  opengl_pipeline_state_manager.h  opengl_resources.cpp
cave/modules/opengles3/: CMakeLists.txt  opengles3_graphics_manager.h
cave/modules/sw/: CMakeLists.txt  pbr_pipeline.cpp  pbr_pipeline.h  render_target.cpp  render_target.h  sampler.cpp  sampler.h  sw_renderer.cpp  sw_renderer.h
cave/modules/sw_renderer/: CMakeLists.txt
cave/modules/sw_renderer/02-texture/: CMakeLists.txt  texture_test.cpp
cave/modules/sw_renderer/03-animation/: animation_test.cpp
cave/modules/sw_renderer/rasterizer/: CMakeLists.txt  JobSystem.cpp  application.h  application_win32.cpp  example_base.cpp  example_base.h  linalg.h  loader.cpp  loader.h  main.cpp  rasterizer.cpp  rasterizer.h  render_target.h  sampler.cpp  sampler.h  shader_program.h  texture_test.cpp
cave/modules/tinygltf/: CMakeLists.txt  importer_tinygltf.cpp  importer_tinygltf.h  tiny_gltf_importer.cpp  tiny_gltf_importer.h  tinygltf_loader.cpp  tinygltf_loader.h
cave/modules/vk/: CMakeLists.txt  vulkan_graphics_manager.cpp  vulkan_graphics_manager.h  vulkan_helpers.cpp
cave/shader/: CMakeLists.txt  pbr.hlsl.h
cave/tools/: CMakeLists.txt
cave/tools/thumbnail/: CMakeLists.txt  main.cpp  main_cli.cpp  main_gui.cpp  thumbnail.cpp  thumbnail.h  thumbnail_dvars.h
engine/shader/: cbuffer.hlsl.h  shader_defines.hlsl.h  shared_path_tracer.h
engine/src/: CMakeLists.txt
engine/src/modules/bullet3/: CMakeLists.txt  bullet3_physics_manager.cpp
modules/bullet3/: CMakeLists.txt  bullet3_physics_manager.cpp  bullet3_physics_manager.h
modules/d3d11/: d3d11_graphics_manager.cpp  d3d11_graphics_manager.h  d3d11_helpers.h  d3d11_pipeline_state_manager.cpp  d3d11_pipeline_state_manager.h
modules/d3d12/: d3d12_core.cpp  d3d12_graphics_manager.cpp  d3d12_pipeline_state_manager.cpp
modules/d3d_common/: d3d_common.cpp  d3d_common.h
modules/opengl4/: opengl4_graphics_manager.cpp
modules/opengl_common/: opengl_common_graphics_manager.cpp  opengl_common_graphics_manager.h  opengl_pipeline_state_manager.cpp  opengl_pipeline_state_manager.h
modules/opengles3/: opengles3_graphics_manager.cpp
modules/tinygltf/: tinygltf_loader.cpp  tinygltf_loader.h
modules/vk/: vulkan_graphics_manager.cpp  vulkan_helpers.h
projects/sample3d/: project.yaml
scripts/: append_image.py  ci_build_job.bat  format_code.py  generate_meta.py  generate_shader.py
tools/editor/: CMakeLists.txt  vxgi.yaml
tools/texture_writer/: CMakeLists.txt
(+696 files in other folders)
